[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/ingame/stage/minigame3/TresAnim/CensSetsGood_down.tres" type="Animation" id=1]
[ext_resource path="res://src/ingame/stage/minigame3/ScripsGm3/stoppedarrow_down.gd" type="Script" id=2]
[ext_resource path="res://assets/art/ingame/stage/minigame 3/setas/baixo.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 10 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Stop_down_Good:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="stoppedarrow_down" type="Area2D"]
script = ExtResource( 2 )

[node name="Stop_down_Colision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="Stop_down_Norm" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 3

[node name="Stop_down_Good" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 3 )
hframes = 3
frame = 2

[node name="Stop_down_Bad" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
hframes = 3

[node name="Stop_down_Anim" type="AnimationPlayer" parent="."]
anims/Good_down = ExtResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="area_shape_entered" from="." to="." method="_on_stoppedarrow_down_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_stoppedarrow_down_area_shape_exited"]
